--- a/styles/main.scss
+++ b/styles/main.scss
@@ -21,8 +21,8 @@ body{
 
 .main-wrapper{
   position: absolute;
-  height: 100%;
-  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -36,9 +36,12 @@ a{
 }
 
 .card-orange{
-  box-shadow: 2px 2px 10px $shadow;
+  display: flex;
   height: 30%;
   width: 40%;
+  max-width: 600px;
+  min-width: 400px;
+  min-height: 200px;
   background-color: $orange;
   align-self: center;
   justify-self: center;
@@ -50,8 +53,8 @@ a{
   color: white;
   font-family: Arial, sans-serif;
   font-size: 1.8em;
-  max-width: 600px;
-  min-height: 200px;
+  box-shadow: 2px 2px 10px $shadow;
+
 }
 
 .card-yellow{
